--- a/module_c/exe009.html
+++ b/module_c/exe009.html
@@ -23,7 +23,7 @@
         function checar() {
             var pais = paistxt.value;
             test.innerHTML = `<p> Você vive no <strong>${pais}</strong>, </p>`;
-            if (pais !== 'Brasil'){
+            if (pais != 'Brasil'){
                 test.innerHTML += `Você é estrangeiro!`
             }else{
                 test.innerHTML += `Você é brasileiro!`
