--- a/module_d/exercise002/exercise_001.html
+++ b/module_d/exercise002/exercise_001.html
@@ -5,20 +5,20 @@
     <title>Módulo D - Exercício 001</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="horario()">
     <header>
-        <h1>Título</h1>
+        <h1>Horário</h1>
     </header>
     <section>
-        <div>
-            Testando
+        <div id="txthora">
+            Agora são
         </div>
-        <div>
-
+        <div id="horario">
+            <img id="imagem" src="manha.png" alt="Foto do Dia">
         </div>
     </section>
     <footer>
-        <p>&copy; marcosMmarchetti</p>
+        <p>&copy; <strong>marcosMmarchetti</strong></p>
     </footer>
     <script src="script.js"></script>
 </body>
