--- a/module_d/exercise003/exercise_001.html
+++ b/module_d/exercise003/exercise_001.html
@@ -16,7 +16,7 @@
             <input name="sexo" value="feminino" type="radio"> Feminino
             <input name="sexo" value="masculino" type="radio"> Masculino <br>
             <input id="verificar" type="button" value="Verificar" onclick="consultar()">
-            <br>Detectamos
+            <br>Detectamos .
         </div>
         <div>
             <img id="foto" src="garota.png" alt="Foto">
