--- a/module_d/exercise003/exercise_001.html
+++ b/module_d/exercise003/exercise_001.html
@@ -11,16 +11,16 @@
     </header>
     <section>
         <div id="cabecalho">
-            Ano de Nascimento: <input id="nascimento" type="number"> <br>
-            Sexo:
-            <input name="sexo" value="feminino" type="radio"> Feminino
-            <input name="sexo" value="masculino" type="radio"> Masculino <br>
-            <input id="verificar" type="button" value="Verificar" onclick="consultar()">
-            <br>Detectamos .
+            <p>Ano de Nascimento: <input id="nascimento" type="number"></p>
+            <p>Sexo:
+                <input name="sexo" value="feminino" type="radio"> Feminino
+                <input name="sexo" value="masculino" type="radio"> Masculino
+            </p>
+            <p><input id="verificar" type="button" value="Verificar" onclick="consultar()"></p>
+            <p id="txtdet">Insira as informação acima.
+
         </div>
-        <div>
-            <img id="foto" src="garota.png" alt="Foto">
-        </div>
+        <div id="imagem"></div>
     </section>
     <footer>
         <p>&copy; <strong>marcosMmarchetti</strong></p>
