--- a/module_e/exercises04/exercise04.html
+++ b/module_e/exercises04/exercise04.html
@@ -7,15 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>Vamos Contar</h1>
+        <h1>Modelo</h1>
     </header>
     <section>
         <div>
-            <p>Início: <input id="inicio" type="number"></p>
-            <p>Fim: <input id="fim" type="number"></p>
-            <p>Passo: <input id="passo" type="number"></p>
-            <p><input type="button" value="Contar" onclick="contar()"></p>
-            <p id="contagem"></p>
+
         </div>
     </section>
     <footer>
