--- a/module_f/exercise07/exercise07.html
+++ b/module_f/exercise07/exercise07.html
@@ -18,7 +18,12 @@
             <select name="numeros" id="numeros" size="10" multiple="multiple">
                 <option>Adicione um Número</option>
             </select>
+            <p>
+                <input type="button" value="Finalizar" onclick="finalizar()">
+                <input type="button" value="Limpar" onclick="limpar()">
+            </p>
         </div>
+        <div id="resultado"></div>
     </section>
     <footer>
         <p> &copy marcosMmarchetti</p>
